# devops-engineer-from-scratch-project-313

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  database.py  docker-compose.yml  main.py  models.py  nginx.conf  package-lock.json  package.json  pyproject.toml  ruff.toml  schemas.py  start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 391267356e2c_create_link_table.py  b40c7fd7c895_create_link_table.py  d63173572584_create_link_table.py
app/: database.py  main.py  routes.py
tests/: conftest.py  test_main.py
